@@ -54,6 +54,7 @@ class CIPRangeValidatorTest extends CValidatorTest {
 			array(array(), '0-255.0-255.0-255.0-255'),
 			array(array(), '192.168.0.0/16,192.168.0.1'),
 			array(array(), '192.168.0.1-127,192.168.2.1'),
+			array(array(), ' 192.168.0.2 , 192.168.1-127.0  ,  192.168.255.0/16  '),
 			array(array(), 'fe80:0:0:0:0:0:c0a8:0/128'),
 			array(array(), 'ffff:ffff:ffff:ffff:ffff:ffff:ffff:ffff/0'),
 			array(array(), 'fe80::c0a8:0/112'),
@@ -61,6 +62,7 @@ class CIPRangeValidatorTest extends CValidatorTest {
 			array(array(), 'fe80:0:0:0:0:0:c0a8:0-ff'),
 			array(array(), 'fe80::c0a8:0-ff'),
 			array(array(), '0000-ffff:0000-ffff:0000-ffff:0000-ffff:0000-ffff:0000-ffff:0000-ffff:0000-ffff'),
+			array(array(), ' fe80::c0a8:100 , fe80::c0a8:0-ff:1  ,  fe80::c0a8:0:1/112  '),
 			array(array('ipRangeLimit' => 4), '255.255.255.254/30'),
 			array(array('ipRangeLimit' => 65536), '255.255.0.0/16'),
 			array(array('ipRangeLimit' => 65536), 'fe80:0:0:0:0:0:c0a8:0/112'),
