@@ -762,7 +762,7 @@ static void	vc_update_statistics(zbx_vc_item_t *item, int hits, int misses)
  ******************************************************************************/
 static void	vc_warn_low_memory()
 {
-	int		now;
+	int	now;
 
 	now = ZBX_VC_TIME();
 
@@ -1774,7 +1774,8 @@ static int	vch_item_add_value_at_head(zbx_vc_item_t *item, const zbx_history_rec
 
 				sindex = schunk->last_value;
 			}
-		} while (0 < zbx_timespec_compare(&schunk->slots[sindex].timestamp, &value->timestamp));
+		}
+		while (0 < zbx_timespec_compare(&schunk->slots[sindex].timestamp, &value->timestamp));
 	}
 	else
 	{
@@ -2324,8 +2325,8 @@ out:
 static int	vch_item_get_value(zbx_vc_item_t *item, const zbx_timespec_t *ts, zbx_history_record_t *value,
 		int *found)
 {
-	int			index, ret = FAIL, hits = 0, misses = 0, now;
-	zbx_vc_chunk_t		*chunk;
+	int		index, ret = FAIL, hits = 0, misses = 0, now;
+	zbx_vc_chunk_t	*chunk;
 
 	*found = 0;
 
@@ -2666,7 +2667,8 @@ out:
 
 		vc_try_lock();
 
-		vc_cache->db_queries += queries;
+		if (NULL != vc_cache)
+			vc_cache->db_queries += queries;
 
 		if (SUCCEED == ret)
 			vc_update_statistics(NULL, 0, values->values_num);
@@ -2755,7 +2757,8 @@ out:
 
 		vc_try_lock();
 
-		vc_cache->db_queries += queries;
+		if (NULL != vc_cache)
+			vc_cache->db_queries += queries;
 
 		if (SUCCEED == ret)
 		{
